@@ -1557,6 +1557,8 @@ window.TextEvent [object TextEventConstructor]
 window.TextEvent.prototype [printed above as window.Event.prototype]
 window.TextMetrics [object TextMetricsConstructor]
 window.TextMetrics.prototype [object TextMetricsPrototype]
+window.TouchEvent [object TouchEventConstructor]
+window.TouchEvent.prototype [printed above as window.Event.prototype]
 window.TypeError [function]
 window.UIEvent [object UIEventConstructor]
 window.UIEvent.prototype [printed above as window.Event.prototype]
