@@ -164,6 +164,7 @@ PASS StyleSheetList.toString() is '[object StyleSheetListConstructor]'
 PASS Text.toString() is '[object TextConstructor]'
 PASS TextEvent.toString() is '[object TextEventConstructor]'
 PASS TextMetrics.toString() is '[object TextMetricsConstructor]'
+PASS TouchEvent.toString() is '[object TouchEventConstructor]'
 PASS UIEvent.toString() is '[object UIEventConstructor]'
 PASS WebKitAnimationEvent.toString() is '[object WebKitAnimationEventConstructor]'
 PASS WebKitCSSKeyframeRule.toString() is '[object WebKitCSSKeyframeRuleConstructor]'
